# notifications_sprint_1

./: .gitignore  README.md  docker-compose.db.yaml  docker-compose.elk.yaml  docker-compose.main.yaml  docker-compose.tests.yaml  docker-compose.yml  env_example  rabbitmq.conf
.github/workflows/: python-package.yml
Admin/: requirements.txt
Admin/src/: main.py
Admin/src/core/: config.py
AuthAPI/: Dockerfile  cli_create_super_user.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt
AuthAPI/core/: config.py  handlers.py
AuthAPI/exceptions/: __init__.py
AuthAPI/models/: models.py
AuthAPI/schemas/: auth.py
AuthAPI/services/: auth.py  broadcast.py  user.py  worker.py
AuthAPI/storages/: __init__.py  user.py
Nginx/: auth_api.conf  broker_api.conf  websocket.conf  worker_api.conf
Tests/functional/: requirements.txt
WebSocket/: Dockerfile  requirements.txt
WebSocket/src/: main.py
Worker/: dockerfile  main.py  pyproject.toml  tasks.py
Worker/admin_panel/: auth_user.py  page.py
Worker/api/: notifications.py
Worker/api/v1/: admin.py  history.py  notifications.py  template.py
Worker/core/: config.py
Worker/db/: init_db.py  mongo.py  redis.py
Worker/exceptions/: __init__.py
Worker/models/: __init__.py  messages.py  template.py
Worker/schemas/: __init__.py  template.py
Worker/services/: auth.py  email_sender.py  events.py  history.py  periodic_notify.py  template.py
Worker/storages/: __init__.py  history.py  template.py
Worker/utils/: __init__.py  sendgrid.py  smtp_server.py
scheme/: schema_nozir.puml  схема архитектуры.puml
(+14 files in other folders)
